--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   go_router: ^14.6.2
   web_socket_channel: ^2.4.0
   path_provider: ^2.1.1
+  flutter_tts: ^3.8.5
 
 dev_dependencies:
   flutter_test:
