--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   web_socket_channel: ^2.4.0
   path_provider: ^2.1.1
   flutter_tts: ^3.8.5
+  shared_preferences: ^2.2.2
+  universal_html: ^2.2.4
 
 dev_dependencies:
   flutter_test:
