--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev": "nodemon facturacion_server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "pdfkit": "^0.13.0"
+    "express": "^4.21.2",
+    "pdfkit": "^0.13.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
